--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="home">
         <div class="container">
             <h2>Welcome to Our Travel Planning Service</h2>
-            <p>We offer personalized travel planning and booking services to ensure a seamless and memorable travel experience.</p>
+            <p>Thank you for choosing our travel planning service!Please fill out below form to help us understand your travel preferences and requirements. We will use this information to create a customized itinerary just for you.</p>
             <a href="#services" class="cta">Get Started</a>
         </div>
     </section>
